// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalFullScreen should render when closed 1`] = `
<ModalFullScreen__StyledModal
  hasCloseButton={false}
  isOpen={false}
  onClose={[MockFunction]}
>
  <ScrollPane
    permanentScrollBar={false}
  >
    <Modal__CloseButton
      onClick={[MockFunction]}
    >
      ×
    </Modal__CloseButton>
    <div>
      Modal content
    </div>
  </ScrollPane>
</ModalFullScreen__StyledModal>
`;

exports[`ModalFullScreen should render when open 1`] = `
<ModalFullScreen__StyledModal
  hasCloseButton={false}
  isOpen={true}
  onClose={[MockFunction]}
>
  <ScrollPane
    permanentScrollBar={false}
  >
    <Modal__CloseButton
      onClick={[MockFunction]}
    >
      ×
    </Modal__CloseButton>
    <div>
      Modal content
    </div>
  </ScrollPane>
</ModalFullScreen__StyledModal>
`;
